# coard

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  decisions.md  io.md
include/operations/: basic.h
src/: main.c  other.c
